showing similar movies

--- a/notebooks/knn_movie.ipynb
+++ b/notebooks/knn_movie.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -218,20 +218,20 @@
        "4         0    0        0  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "movies_ds = pd.read_csv('../recommendation_dataset.csv')\n",
-    "movies_ds = movies_ds.drop(['user_id', 'movie_id', 'movie_id.1', 'adventure.1', 'adventure.2', 'adventure.3'], axis=1)\n",
+    "movies_ds = movies_ds.drop(['user_id', 'movie_id'], axis=1)\n",
     "movies_ds.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "4         0    0        0  "
       ]
      },
-     "execution_count": 203,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,203 +432,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>action</th>\n",
-       "      <th>adventure</th>\n",
-       "      <th>animation</th>\n",
-       "      <th>comedy</th>\n",
-       "      <th>drama</th>\n",
-       "      <th>fantasy</th>\n",
-       "      <th>filmnoir</th>\n",
-       "      <th>horror</th>\n",
-       "      <th>imax</th>\n",
-       "      <th>musical</th>\n",
-       "      <th>mystery</th>\n",
-       "      <th>other</th>\n",
-       "      <th>romance</th>\n",
-       "      <th>scifi</th>\n",
-       "      <th>thriller</th>\n",
-       "      <th>war</th>\n",
-       "      <th>western</th>\n",
-       "      <th>average_rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Toy Story (1995)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.046875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Jumanji (1995)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.875000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>Grumpier Old Men (1995)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.454545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>Waiting to Exhale (1995)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>Father of the Bride Part II (1995)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.583333</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 title  action  adventure  animation  comedy  \\\n",
-       "0                     Toy Story (1995)       0          0          1       1   \n",
-       "32                      Jumanji (1995)       0          0          0       0   \n",
-       "40             Grumpier Old Men (1995)       0          0          0       1   \n",
-       "51            Waiting to Exhale (1995)       0          0          0       1   \n",
-       "53  Father of the Bride Part II (1995)       0          0          0       1   \n",
-       "\n",
-       "    drama  fantasy  filmnoir  horror  imax  musical  mystery  other  romance  \\\n",
-       "0       0        1         0       0     0        0        0      0        0   \n",
-       "32      0        1         0       0     0        0        0      0        0   \n",
-       "40      0        0         0       0     0        0        0      0        1   \n",
-       "51      1        0         0       0     0        0        0      0        1   \n",
-       "53      0        0         0       0     0        0        0      0        0   \n",
-       "\n",
-       "    scifi  thriller  war  western  average_rating  \n",
-       "0       0         0    0        0        4.046875  \n",
-       "32      0         0    0        0        2.875000  \n",
-       "40      0         0    0        0        3.454545  \n",
-       "51      0         0    0        0        2.500000  \n",
-       "53      0         0    0        0        2.583333  "
-      ]
-     },
-     "execution_count": 204,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "movies_ds['average_rating'] = movies_ds.groupby('title')['rating'].transform('mean')\n",
     "movies_ds = movies_ds.drop_duplicates(subset='title').drop(['rating'], axis=1)\n",
-    "movies_ds.head()"
+    "movies_ds.head()\n",
+    "# save similar_movies_ds\n",
+    "movies_ds.to_csv('../similar_movies_ds.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +536,7 @@
        "0        4.046875  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
